--- a/auth/signup.html
+++ b/auth/signup.html
@@ -1,1 +1,50 @@
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Signup</title>
+    <style type="text/css" media="all"></style>
+  </head>
+  <body>
+    <h1>Hii from Signup</h1>
+    <script type="text/javascript" charset="utf-8">
+      const interval = setInterval(() => {
+        const user = JSON.parse(localStorage.getItem("application.user"));
+        if (user && user.auth.isLoggedIn) {
+          clearInterval(interval);
+          alert();
+          const redirect = sessionStorage.getItem("redirect");
+          sessionStorage.removeItem("redirect");
+          if (redirect) {
+            window.history.back();
+          } else {
+            window.location.replace("../index.html");
+          }
+        }
+      }, 1);
 
+      window.ondblclick = () => {
+        const userr = {
+          auth: {
+            isLoggedIn: true
+          },
+          account: {
+            email: "shubhajit3012@gmail.com"
+          },
+          device: {
+            info: ""
+          },
+          session: {
+            id: ""
+          }
+        };
+        localStorage.setItem("application.user", JSON.stringify(userr));
+        // window.location.reload();
+      };
+
+      //localStorage.clear();
+    </script>
+  </body>
+</html>
