--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
         //window.location.replace(`auth/login.html?r=${url}`);
         //window.location.href = "auth/login.html";
       }
-      window.onlongpress = () => {
+      window.ondblclick = () => {
         alert();
       }
       window.ondblclick = () => {
