--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
         //window.location.href = "auth/login.html";
       }
       window.ondblclick = () => {
-        alert();
+        window.location.href = "auth/login.html";
       }
       window.ondblclick = () => {
         localStorage.clear();
