--- a/auth/login.html
+++ b/auth/login.html
@@ -25,7 +25,7 @@
           }
         }
       }, 1);
-      sessionStorage.setItem("redirect", "gg");
+      //sessionStorage.setItem("redirect", "gg");
     </script>
   </body>
 </html>
