--- a/auth/login.html
+++ b/auth/login.html
@@ -25,6 +25,9 @@
           }
         }
       }, 1);
+      document.querySelector("a").addEventListener("click", ()=>{
+        sessionStorage.setItem("redirect", "gg");
+      })
       //sessionStorage.setItem("redirect", "gg");
     </script>
   </body>
