--- a/index.html
+++ b/index.html
@@ -367,6 +367,7 @@
       }
       if(prompt()){
         localStorage.clear();
+        console.log(localStorage)
       }
       window.addEventListener("DOMContentLoaded", () => {
         const fragments = ["home", "search", "broadcast", "profile"];
