--- a/auth/login.html
+++ b/auth/login.html
@@ -25,6 +25,7 @@
           }
         }
       }, 1);
+      alert(document.referrer)
       document.querySelector("a").addEventListener("click", ()=>{
         sessionStorage.setItem("redirect", "gg");
       })
