--- a/auth/login.html
+++ b/auth/login.html
@@ -75,7 +75,7 @@
     if (wasUserReferredInternally && history.length > 1) {
       history.back();
     } else {
-      window.location.replace("index.html");
+      window.location.replace("/index.html");
     }
   }
 }, 50);
