--- a/auth/signup.html
+++ b/auth/signup.html
@@ -68,7 +68,7 @@
           if (wasUserReferredInternally && history.length > 1) {
             history.back();
           } else {
-            window.location.replace("index.html");
+            window.location.replace("/index.html");
           }
         }
       }, 50);
