--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
         window.location.href = "auth/login.html";
       }
       window.ondblclick = () => {
-        console.log(localStorage)
+        localStorage.clear();
         
       }
       
