--- a/auth/signup.html
+++ b/auth/signup.html
@@ -68,6 +68,7 @@
           if (wasUserReferredInternally && history.length > 1) {
             history.back();
           } else {
+            alert("Signup")
             window.location.replace("/index.html");
           }
         }
