--- a/auth/login.html
+++ b/auth/login.html
@@ -75,6 +75,7 @@
     if (wasUserReferredInternally && history.length > 1) {
       history.back();
     } else {
+      alert("Login")
       window.location.replace("/index.html");
     }
   }
