--- a/auth/login.html
+++ b/auth/login.html
@@ -12,6 +12,7 @@
     <a href="signup.html">signup.html</a>
 
 <script type="text/javascript" charset="utf-8">
+ alert()
   const interval = setInterval(() => {
   const user = JSON.parse(localStorage.getItem("application.user"));
 
