--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="dark light" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <title>OneClub</title>
     <style type="text/css" media="all">
       @media only screen and (prefers-color-scheme: light) {
         :root {
@@ -221,7 +221,7 @@
             <main>
               <div class="container" style="background-color: #efefef; height: 150vh">
                 <div class="fragment">Collections</div>
-                <div class="fragment">Expanses <a id="Click" href="auth/signup.html">Click</a></div>
+                <div class="fragment">Expanses <a id="Click" href="auth/login.html">Login</a></div>
               </div>
             </main>
           </div>
@@ -356,17 +356,46 @@
             return;
           }
         });
-      } else {
-        //const url = encodeURIComponent(window.location.pathname);
-        //window.location.replace(`auth/login.html?r=${url}`);
-        //window.location.href = "auth/login.html";
-        window.location.href = "auth/login.html";
       }
       window.ondblclick = () => {
         localStorage.clear();
-        
-      }
-      
+      };
+      //addEventListener
+
+      // Har internal page par is file ko include karein
+      document.addEventListener("DOMContentLoaded", () => {
+        const getStack = () => {
+          const stack = sessionStorage.getItem("navStack");
+          return stack ? JSON.parse(stack) : [];
+        };
+
+        const setStack = stack => {
+          sessionStorage.setItem("navStack", JSON.stringify(stack));
+        };
+
+        const currentPath = window.location.pathname;
+        const stack = getStack();
+        const lastPath = stack[stack.length - 1];
+
+        if (currentPath !== lastPath) {
+          // Ye tab chalta hai jab user naye page par aata hai
+          // Ya history.back se wapas aata hai.
+          // Hum stack ko sync rakhenge.
+          if (stack.includes(currentPath)) {
+            // Agar back button se wapas aaye, to stack se aage ka hissa hata do
+            const index = stack.indexOf(currentPath);
+            stack.splice(index + 1);
+          } else {
+            // Agar aage badhe, to naya path stack mein daal do
+            stack.push(currentPath);
+          }
+        }
+
+        setStack(stack);
+      });
+
+      //addEventListener
+
       window.addEventListener("DOMContentLoaded", () => {
         const fragments = ["home", "search", "broadcast", "profile"];
         const fragment = sessionStorage.getItem("fragment") || "home";
