--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
       //addEventListener
 
       // Har internal page par is file ko include karein
-      document.addEventListener("DOMContentLoaded", () => {
+      /*document.addEventListener("DOMContentLoaded", () => {
         const getStack = () => {
           const stack = sessionStorage.getItem("navStack");
           return stack ? JSON.parse(stack) : [];
@@ -392,7 +392,7 @@
         }
 
         setStack(stack);
-      });
+      });*/
 
       //addEventListener
 
